--- a/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
@@ -192,7 +192,7 @@
                           {
                              <div class="mbp_first d-flex align-items-center">
                                 <div class="flex-shrink-0">
-                                  <img src="images/blog/reviewer1.png" class="mr-3" alt="reviewer1.png">
+                                  <img src="@item.Customer.CustomerAvatar" class="mr-3" alt="reviewer1.png">
                                 </div>
                                 <div class="flex-grow-1 ms-4">
                                   <h4 class="sub_title mt20">@item.Customer.FullName</h4>
