--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
 
-                            <input type="text" name="cpId" id="cpId" value="" readonly >
+                            <input type="hidden" name="cpId" id="cpId" value="" readonly >
 
                         </form>
                     </div>
