--- a/SuperMarket_Client/wwwroot/Asset/css/style.css
+++ b/SuperMarket_Client/wwwroot/Asset/css/style.css
@@ -1059,45 +1059,7 @@ address {
   color: #fff;
   font-size: 33px;
 }
-.home5_iconbox li:hover .icon{
-  background-color: #86BC42;
-  cursor: pointer;
-}
-.home5_iconbox li p{
-  color: #fff;
-  font-size: 16px;
-  font-weight: 600;
-}
-.iconbox.home9_style{
-  margin: 20px 0 30px;
-}
-.iconbox.home9_style .thumb img{
-  margin: 0 auto;
-  width: 115px;
-  -webkit-transition: all .3s ease;
-  -moz-transition: all .3s ease;
-  -o-transition: all .3s ease;
-  transition: all .3s ease;
-}
-.iconbox.home9_style:hover .thumb img{  
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1);
-}
-.header_top.home9{
-  background-color: #ffffff;
-  height: 77px;
-  position: relative;
-}
-.header_top.home9.style2{
-  background-color: #121212;
-}
-.header_top.home9.innerpage_style{
-  height: auto;
-  padding: 30px 0;
-}
+
 .light_white,
 .light_white:hover{
   color: rgba(255,255,255, 0.5);
@@ -20871,6 +20833,10 @@ canvas#myChart{
   position: relative;
   text-align: center;
 }
+.shop_item .thumb img{
+width:auto;
+height:250px;
+}
 .shop_item .offer_badge{
   left: 0;
   position: absolute;
@@ -22264,7 +22230,7 @@ input.quantity-num[type="number"]::-webkit-outer-spin-button {
 /*
 TEST THUMBNAIL CAROUSEL*/
 #slider-wrapper {
-    max-width: 540px;
+    max-width: 400px;
     width: auto;
     height: auto;
     margin: 50px auto;
@@ -22283,7 +22249,7 @@ TEST THUMBNAIL CAROUSEL*/
 
     #image-slider ul {
         width: 100%;
-        height: 500px;
+        height: 388px;
         position: relative;
     }
 
