--- a/SuperMarket_Client/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -33,7 +33,6 @@
 }
 	<script>
 		var previewArea = document.getElementById("previewImg");
-		var imgdefault = `<img class="rounded py-2"  width="100px"`;
 		var fileUpload = document.getElementById("fileUpLoad");
 		function PreviewMainImg() {
 
@@ -42,8 +41,8 @@
                 fileUpload.value = "";
             }
             else {
-				var temp = window.url.createobjecturl(fileupload.files[0]);
-				previewarea.src = temp;
+				var temp = window.URL.createObjectURL(fileUpload.files[0]);
+				previewArea.src = temp;
 			}
 			
 		}
