--- a/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -126,7 +126,7 @@
 						<a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="Product">Products</a>
 						<a class="collapse-item" asp-area="Admin" asp-action="Brand_CategoryManage" asp-controller="Brand_Category">Categories</a>
 						<a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="Brand">Brand</a>
-						<a class="collapse-item" asp-area="Admin" asp-action="ViewColor" asp-controller="Home">Color</a>
+						<a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="Branch">Branch</a>
 						<a class="collapse-item" asp-area="Admin" asp-action="ViewCoupon" asp-controller="Home">Coupon</a>
 
 					</div>
