--- a/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
@@ -254,6 +254,8 @@
 
 
 
+@if(Model.RelatedProduct != null)
+{
     <!-- Our Shopping Product -->
     <section class="our-shop bt1">
         <div class="container">
@@ -316,6 +318,8 @@
             </div>
         </div>
     </section>
+
+}
 
 
 
