--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -196,10 +196,10 @@
 							<a href="/"><span class="title">HOME</span></a>
 						</li>
 						<li class="megamenu_style">
-							<a asp-action="Shop" asp-controller="Product" asp-area="Customer"><span class="title">SHOP</span></a>
+							<a asp-action="Index" asp-controller="Product" asp-area="Customer"><span class="title">SHOP</span></a>
 						</li>
 						<li class="megamenu_style">
-							<a href="#"><span class="title">COMPARE</span></a>
+							<a asp-action="CompareProduct" asp-area="Customer" asp-controller="Product"><span class="title">COMPARE</span></a>
 						</li>
 						<li>
 							<a href="#"><span class="title">PAGES</span></a>
